# migrave_perception

./: .gitattributes  .gitattributes.swp  README.md
migrave_action_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
migrave_action_recognition/common/src/action_recognition/: action_classifier.py  action_learner.py  action_model.py
migrave_action_recognition/common/src/migrave_action_recognition/: action_recognition.py
migrave_action_recognition/config/: action_list_original.txt  action_model_config.yaml  action_model_config2.yaml  action_model_config_original.yaml  exp_action_list1.txt  exp_action_list3.txt  exp_model1_config.yaml  exp_model2_config.yaml  exp_model3_config.yaml
migrave_action_recognition/data/bag_files/: 001.bag  002.bag  recognize_data1.bag  test.bag
migrave_action_recognition/data/example_trn_data/: S001C001P001R001A043.skeleton  S001C001P004R001A043.skeleton  S001C002P004R002A043.skeleton  S001C003P001R001A043.skeleton  S001C003P002R001A043.skeleton  S001C003P004R001A043.skeleton  S002C001P009R001A043.skeleton  S002C002P009R001A043.skeleton  S002C003P011R001A043.skeleton  S002C003P012R001A043.skeleton  S004C001P003R001A043.skeleton  S005C002P010R001A043.skeleton  S005C003P004R002A043.skeleton  S006C001P007R001A043.skeleton  S007C003P027R002A043.skeleton  S008C001P019R001A043.skeleton  S008C001P031R002A043.skeleton  S008C001P034R002A043.skeleton  S008C002P019R001A043.skeleton  S009C001P025R002A043.skeleton  S009C003P025R002A043.skeleton  S010C001P019R002A043.skeleton  S010C002P016R002A043.skeleton  S010C002P019R001A043.skeleton  S010C003P019R002A043.skeleton
migrave_action_recognition/data/example_tst_data/: S001C001P003R001A006.skeleton  S001C001P006R001A001.skeleton  S001C001P007R001A037.skeleton  S017C001P020R002A036.skeleton
migrave_action_recognition/data/exp_data/000/: learn_data1.bag  learn_data1.npz  recognize_data1.bag  recognize_data2.bag  recognize_data3.bag
migrave_action_recognition/data/exp_data/001/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/002/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/003/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data3.bag  recognize_data4.bag
migrave_action_recognition/data/exp_data/004/: learn_data.bag  learn_data.npz  recognize_data.bag
migrave_action_recognition/data/exp_data/005/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag
migrave_action_recognition/data/exp_data/006/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/007/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/008/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/009/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/010/: learn_data.bag  learn_data.npz  recognize_data.bag
migrave_action_recognition/data/exp_data/011/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/012/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  recognize_data4.bag  recognize_data4.npy
migrave_action_recognition/data/exp_data/013/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data4.bag
migrave_action_recognition/data/exp_data/014/: learn_data.bag  learn_data.npz  recognize_data.bag  recognize_data2.bag  recognize_data2.npy  recognize_data3.bag  recognize_data3.npy  (+2 more)
migrave_action_recognition/data/learned_data/: learn_data.bag  test.npz
migrave_action_recognition/models/: exemplars_model10.pkl
migrave_action_recognition/ros/action/: ContinualActionLearning.action  LearnAction.action  RecognizeAction.action
migrave_action_recognition/ros/launch/: LearnAction.launch  RecognizeAction.launch  SaveSkeleton.launch  action_recognition.launch
migrave_action_recognition/ros/scripts/: README.md  action_recognizer  continual_action_server  learn_action_client  learn_action_demo  recognize_action_client  recognize_action_demo  save_skeleton_data
migrave_audio_feature_detector/: CMakeLists.txt  package.xml  setup.py
migrave_audio_feature_detector/config/: audio_config.yaml
migrave_audio_feature_detector/ros/launch/: audio_feature_detector.launch
migrave_audio_feature_detector/ros/scripts/: audio_feature_detector
migrave_face_feature_detector/: CMakeLists.txt  README.md  package.xml  setup.py
migrave_face_feature_detector/ros/config/: camera_parameters.yaml
migrave_face_feature_detector/ros/launch/: face_feature_detector.launch
migrave_face_feature_detector/ros/scripts/: face_feature_detector  nuitrack_face_feature_detector
migrave_face_feature_detector/ros/src/: openface_ros.cpp
migrave_skeleton_tracking/: CMakeLists.txt  README.md  package.xml
migrave_skeleton_tracking/cmake/Modules/: Findopenpose.cmake
migrave_skeleton_tracking/ros/launch/: skeleton_tracking.launch
migrave_skeleton_tracking/ros/src/: openpose_ros.cpp
(+158 files in other folders)
