<?xml version="1.0"?>
<package format="2">
  <name>migrave_skeleton_tracking</name>
  <version>1.0.0</version>
  <description>A package for skeleton tracking</description>

  <author email="mohammad.wasil@h-brs.de">Mohammad Wasil</author>
  <maintainer email="mohammad.wasil@h-brs.de">Mohammad Wasil</maintainer>
  <maintainer email="robotics@h-brs.de">MAS robotics</maintainer>

  <license>AGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>migrave_ros_msgs</build_depend>
  <build_depend>migrave_common</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>migrave_ros_msgs</exec_depend>
  <exec_depend>migrave_common</exec_depend>

  <export>
  </export>
</package>
